[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bstpackage"
description = "A package that helps manipulate and visualize binary search trees."
version = "0.0.7"
authors = [
  { name="Alex Xiang", email="qx501@nyu.edu" },
  { name="Yimeng Duan", email="yd2107@nyu.edu" },
  { name="Richard Fu", email="df1942@nyu.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "BST", "visualization"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2023/3-python-package-exercise-ayr"
"Repository" = "https://github.com/software-students-fall2023/3-python-package-exercise-ayr.git"
"Bug Tracker" = "https://github.com/software-students-fall2023/3-python-package-exercise-ayr/issues"

[project.scripts]
bstpackage = "bstpackage.__main__:main"
